--- a/style.css
+++ b/style.css
@@ -234,11 +234,42 @@ body{
     padding: 0.45rem;
 }
 .element p {
-    color: #260F26;
+    color: white;
     font-size: 0.75rem;
 }
 .box-image2 {
     height: 80%;
+    background-size: cover;
+}
+
+.box2{
+    width:97%;
+    height:285px;
+    background-color: black;
+    margin-top:1.25rem;
+    padding:20px 20px 20px 20px;
+}
+.box2 h2{
+    font-size: 20px;
+    color: #eeeeee;
+    display: inline;
+}
+.box2 p{
+    color: #71B48D;
+    font-size: 0.85rem;
+    display: inline;
+    padding :0 0 0 1rem;
+}
+.box2-content{
+    display:flex;
+    height:220px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.box2-image{
+    width:20%;
+    height:200px;
+    margin:0px 5px 0px 5px;
     background-size: cover;
 }
 
